--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,9 @@ section {
 	margin: 1rem auto;
 	padding: 0 1rem;
 }
+section.wide {
+	max-width: 40rem;
+}
 
 .group {
 	border: 1px solid black;
@@ -87,5 +90,12 @@ textarea {
 }
 
 form > p {
+	text-align: center;
+}
+
+pre {
+	padding: 0.3rem;
+	width: 100%;
+	box-sizing: border-box;
 	text-align: center;
 }
